--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {
   margin: 0;
   scrollbar-width: none;
   position: relative;
-  min-height: 100vh;
+  min-height: calc(100vh - var(--footer-height));
 }
 
 h1 {
