--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@ div.header {
 
 div.content {
   width: 100%;
+  min-height: calc(100vh - var(--header-height) - var(--footer-height));
   background-color: var(--ivory);
   transform: translate(0px, var(--header-height));
   padding-bottom: var(--footer-height);
