--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ h1 {
 
 ::-webkit-scrollbar {
   width: 0px;
+  height: 0px;
 }
 
 a {
@@ -64,7 +65,6 @@ div.footer {
   background-color: var(--old-rose);
   width: 100%;
   height: var(--footer-height);
-  z-index: 10;
   display: flex;
   flex-direction: row;
   position: absolute;
